[package]
name = "seamcarving"
description = "Content-aware image resizing using the seam carving algorithm. Allows changing the aspect ratio of an image without distorting its contents."
version = "0.2.1"
authors = ["Ophir LOJKINE <pere.jobs@gmail.com>"]
license = "LGPL-3.0-or-later"
documentation = "https://docs.rs/seamcarving"
homepage = "https://github.com/lovasoa/seamcarving#seamcarving"
repository = "https://github.com/lovasoa/seamcarving.git"
readme = "README.md"
edition = "2018"

[dependencies]
image = "0.22"
num-traits = "0.2"

[dev-dependencies]
criterion = "0.2"
imageproc = "0.18"

[badges]
travis-ci = { repository = "lovasoa/seamcarving" }

[profile.release]
debug = true

[[bench]]
name = "benchmark"
harness = false
